@@ -1,3 +1,6 @@
+6/29/17
+ - added MasterGeant4.err error log
+
 6/1/17
  - adding goptions to various classes. added gsetup with example.
 
